vlib/v/checker/tests/function_missing_return_type.out
vlib/v/checker/tests/function_missing_return_type.vv:1:1: error: missing return at end of function `h`
    1 | fn h() int {
      | ~~~~~~~~~~
    2 | }
    3 |
