vlib/v/checker/tests/function_missing_return_type.vv
fn h() int {
}

fn main() {
	d := h()
	println('$d')
}
